--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start:dev": "nodemon src/server/index.js --exact babel-node",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "lint": "eslint src/frontend/ --ext .js --ext .jsx --fix"
   },
   "jest": {
     "moduleNameMapper": {
@@ -60,47 +61,47 @@
     "react-router": "^5.1.2",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
+    "react-test-renderer": "^16.13.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "terser-webpack-plugin": "^2.1.2",
     "webpack": "^4.41.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/preset-env": "^7.6.2",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/core": "^7.10.3",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/preset-env": "^7.10.3",
+    "@babel/preset-react": "^7.10.1",
     "audit": "0.0.6",
-    "autoprefixer": "^9.6.1",
-    "babel-eslint": "^10.0.3",
+    "autoprefixer": "^9.8.4",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^24.9.0",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-assign": "^6.22.0",
-    "compression-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.2.0",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1",
-    "eslint": "^6.5.1",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-loader": "^3.0.2",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.16.0",
-    "file-loader": "^4.2.0",
+    "compression-webpack-plugin": "^3.1.0",
+    "css-loader": "^3.6.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-loader": "^3.0.4",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.2",
+    "file-loader": "^4.3.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
-    "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.12.0",
-    "nodemon": "^1.19.1",
+    "mini-css-extract-plugin": "^0.8.2",
+    "node-sass": "^4.14.1",
+    "nodemon": "^1.19.4",
     "postcss-loader": "^3.0.0",
-    "qs": "^6.9.0",
-    "react-test-renderer": "^16.11.0",
-    "redux-mock-store": "^1.5.3",
-    "sass-loader": "^8.0.0",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.2",
+    "qs": "^6.9.4",
+    "redux-mock-store": "^1.5.4",
+    "sass-loader": "^8.0.2",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-manifest-plugin": "^2.2.0"
   }
